<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity">

    <Button
        android:id="@+id/calcBtnPlus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="+"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnRoot"
        app:layout_constraintStart_toEndOf="@+id/calcBtn3"
        app:layout_constraintTop_toBottomOf="@+id/eqView" />

    <Button
        android:id="@+id/calcBtnMinus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="-"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnSin"
        app:layout_constraintStart_toEndOf="@+id/calcBtn6"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnPlus" />

    <Button
        android:id="@+id/calcBtnFactor"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="*"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnCos"
        app:layout_constraintStart_toEndOf="@+id/calcBtn9"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnMinus" />

    <Button
        android:id="@+id/calcBtn1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eqView" />

    <Button
        android:id="@+id/calcBtnOpenBracket"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="("
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnCloseBracket"
        app:layout_constraintStart_toEndOf="@+id/calcBtnClear"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnDivide" />

    <Button
        android:id="@+id/calcBtnClear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="C"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnOpenBracket"
        app:layout_constraintStart_toEndOf="@+id/calcBtnEq"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnExp" />

    <Button
        android:id="@+id/calcBtnCloseBracket"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text=")"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calcBtnOpenBracket"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnTan" />

    <Button
        android:id="@+id/calcBtnEq"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="="
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn0" />

    <Button
        android:id="@+id/calcBtnExp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="^"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnDivide"
        app:layout_constraintStart_toEndOf="@+id/calcBtnDot"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn9" />

    <Button
        android:id="@+id/calcBtnRoot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="√"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calcBtnPlus"
        app:layout_constraintTop_toBottomOf="@+id/eqView" />

    <Button
        android:id="@+id/calcBtnSin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="sin"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calcBtnMinus"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnRoot" />

    <Button
        android:id="@+id/calcBtnCos"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="cos"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calcBtnFactor"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnSin" />

    <Button
        android:id="@+id/calcBtnTan"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="tan"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calcBtnDivide"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnCos" />

    <Button
        android:id="@+id/calcBtn0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="0"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn7" />

    <TextView
        android:id="@+id/eqView"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcName" />

    <TextView
        android:id="@+id/calcName"
        android:layout_width="354dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calcBtnDivide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="/"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnTan"
        app:layout_constraintStart_toEndOf="@+id/calcBtnExp"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnFactor" />

    <Button
        android:id="@+id/calcBtnDot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="."
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnExp"
        app:layout_constraintStart_toEndOf="@+id/calcBtn0"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn8" />

    <Button
        android:id="@+id/calcBtn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtn3"
        app:layout_constraintStart_toEndOf="@+id/calcBtn1"
        app:layout_constraintTop_toBottomOf="@+id/eqView" />

    <Button
        android:id="@+id/calcBtn3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="3"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnPlus"
        app:layout_constraintStart_toEndOf="@+id/calcBtn2"
        app:layout_constraintTop_toBottomOf="@+id/eqView" />

    <Button
        android:id="@+id/calcBtn4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="4"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn1" />

    <Button
        android:id="@+id/calcBtn5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="5"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtn6"
        app:layout_constraintStart_toEndOf="@+id/calcBtn4"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn2" />

    <Button
        android:id="@+id/calcBtn6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="6"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnMinus"
        app:layout_constraintStart_toEndOf="@+id/calcBtn5"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn3" />

    <Button
        android:id="@+id/calcBtn7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="7"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn4" />

    <Button
        android:id="@+id/calcBtn8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="8"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtn9"
        app:layout_constraintStart_toEndOf="@+id/calcBtn7"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn5" />

    <Button
        android:id="@+id/calcBtn9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="9"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/calcBtnFactor"
        app:layout_constraintStart_toEndOf="@+id/calcBtn8"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="172dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/rad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtnOpenBracket" />

</androidx.constraintlayout.widget.ConstraintLayout>